增加了后台数据查看的页面-待完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
   <string name="welcome_tip1">对我说:“小途小途”</string>
   <string name="welcome_tip2">想要唤醒我的话</string>
   <string name="face_recognition">人脸识别</string>
+  <string name="setting_visitingdata">来访记录</string>
 </resources>
